test/libyul/yulSyntaxTests/bin_string_literal_7.yul
{
    let name := bin"111111110000000"
}
// ====
// dialect: evm
// ----
// ParserError 1465: (18-30): Illegal token: Expected numbers of bits multiple of 8.
